--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
+# NOTA BENE: the proper tensorflow version (gpu or cpu)
+# must be installed BEFORE since it is platform dependent
+# so also the dependencies (e.g. numpy, protobuf, ecc.)
+# are actually ignored in the current requirements file.
+
 # all the requirements are listed in setup.py
 -e .
 
-astroid==1.5.2
-funcsigs==1.0.2
-isort==4.2.5
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-pkg-resources==0.0.0
-protobuf==3.2.0
-pylint==1.7.1
-pyspark==2.1.0+hadoop2.7
-six==1.10.0
-tensorflow==1.1.0
-Werkzeug==0.12.1
-wrapt==1.10.10
+# requires mock to run the tests
+mock==2.0.0
